// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recipe ingredient replacement replaces ingredients in create recipes: modified create:raw_zinc recipe 1`] = `
{
  "ingredients": [
    {
      "tag": "#forge:raw_materials/iron",
    },
  ],
  "processingTime": 400,
  "results": [
    {
      "item": "create:crushed_raw_zinc",
    },
    {
      "chance": 0.75,
      "item": "create:experience_nugget",
    },
  ],
  "type": "create:crushing",
}
`;

exports[`recipe ingredient replacement replaces ingredients in create recipes: modified create:raw_zinc_block recipe 1`] = `
{
  "key": {
    "C": {
      "tag": "#forge:raw_materials/iron",
    },
  },
  "pattern": [
    "CCC",
    "CCC",
    "CCC",
  ],
  "result": {
    "item": "create:raw_zinc_block",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`recipe ingredient replacement replaces ingredients in create recipes: modified create:zinc_ingot_from_raw_ore recipe 1`] = `
{
  "cookingtime": 100,
  "experience": 0.7,
  "ingredient": {
    "tag": "#forge:raw_materials/iron",
  },
  "result": "create:zinc_ingot",
  "type": "minecraft:blasting",
}
`;

exports[`recipe ingredient replacement replaces ingredients in create recipes: modified create:zinc_ingot_from_raw_ore recipe 2`] = `
{
  "cookingtime": 200,
  "experience": 0.7,
  "ingredient": {
    "tag": "#forge:raw_materials/iron",
  },
  "result": "create:zinc_ingot",
  "type": "minecraft:smelting",
}
`;

exports[`recipe ingredient replacement replaces ingredients with additional input filter: modified note_block recipe 1`] = `
{
  "key": {
    "#": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:emerald",
    },
  },
  "pattern": [
    "###",
    "#X#",
    "###",
  ],
  "result": {
    "item": "minecraft:note_block",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`recipe ingredient replacement replaces ingredients with additional input filter: modified piston recipe 1`] = `
{
  "key": {
    "#": {
      "item": "minecraft:cobblestone",
    },
    "R": {
      "item": "minecraft:emerald",
    },
    "T": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:iron_ingot",
    },
  },
  "pattern": [
    "TTT",
    "#X#",
    "#R#",
  ],
  "result": {
    "item": "minecraft:piston",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`recipe ingredient replacement replaces ingredients: modified compass recipe 1`] = `
{
  "key": {
    "#": {
      "item": "minecraft:iron_ingot",
    },
    "X": {
      "item": "minecraft:emerald",
    },
  },
  "pattern": [
    " # ",
    "#X#",
    " # ",
  ],
  "result": {
    "item": "minecraft:compass",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`recipe ingredient replacement replaces ingredients: modified piston recipe 1`] = `
{
  "key": {
    "#": {
      "item": "minecraft:cobblestone",
    },
    "R": {
      "item": "minecraft:emerald",
    },
    "T": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:iron_ingot",
    },
  },
  "pattern": [
    "TTT",
    "#X#",
    "#R#",
  ],
  "result": {
    "item": "minecraft:piston",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`recipe ingredient replacement replaces ingredients: recipes including redstone as an ingredient 1`] = `
[
  "data/botania/recipes/brew/speed.json",
  "data/botania/recipes/brew/weak_regeneration.json",
  "data/botania/recipes/detector_light_relay.json",
  "data/botania/recipes/ender_eye_block.json",
  "data/botania/recipes/hourglass.json",
  "data/botania/recipes/lens_mine.json",
  "data/botania/recipes/mana_detector.json",
  "data/botania/recipes/mana_infusion/mana_powder_dust.json",
  "data/botania/recipes/mana_infusion/redstone_dupe.json",
  "data/botania/recipes/mana_infusion/redstone_to_glowstone_dust.json",
  "data/botania/recipes/pattern_1_1.json",
  "data/botania/recipes/pattern_1_2.json",
  "data/botania/recipes/pattern_1_3.json",
  "data/botania/recipes/pattern_2_1.json",
  "data/botania/recipes/pattern_2_2.json",
  "data/botania/recipes/pattern_2_3.json",
  "data/botania/recipes/pattern_3_1.json",
  "data/botania/recipes/pattern_3_2.json",
  "data/botania/recipes/pattern_donut.json",
  "data/botania/recipes/quartz_red.json",
  "data/botania/recipes/red_pavement.json",
  "data/botania/recipes/redstone_root.json",
  "data/botania/recipes/redstone_spreader.json",
  "data/botania/recipes/spark_changer.json",
  "data/botania/recipes/unholy_cloak.json",
  "data/minecraft/recipes/clock.json",
  "data/minecraft/recipes/compass.json",
  "data/minecraft/recipes/detector_rail.json",
  "data/minecraft/recipes/dispenser.json",
  "data/minecraft/recipes/dropper.json",
  "data/minecraft/recipes/note_block.json",
  "data/minecraft/recipes/observer.json",
  "data/minecraft/recipes/piston.json",
  "data/minecraft/recipes/powered_rail.json",
  "data/minecraft/recipes/redstone_block.json",
  "data/minecraft/recipes/redstone_lamp.json",
  "data/minecraft/recipes/redstone_torch.json",
  "data/minecraft/recipes/repeater.json",
  "data/minecraft/recipes/target.json",
]
`;
